ajout du dossier pages

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="presentation.html">Présentation</a></li>
-          <li><a href="passion.html">Mes passions</a></li>
-          <li><a href="projet.html">Mon Projet</a></li>
+          <li><a href="pages/presentation.html">Présentation</a></li>
+          <li><a href="pages/passion.html">Mes passions</a></li>
+          <li><a href="pages/projet.html">Mon Projet</a></li>
         </ul>
       </nav>
     </header>
