--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <img
       src="https://www.shutterstock.com/shutterstock/photos/1146069941/display_1500/stock-vector-welcome-poster-with-spectrum-brush-strokes-on-white-background-colorful-gradient-brush-design-1146069941.jpg"
       alt="Bannière de bienvenue"
+      height="200"
     />
     <p>Premier exercice</p>
     <footer><h2>© Nom Prénom</h2></footer>
