--- a/pages/projet.html
+++ b/pages/projet.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Accueil</a></li>
+          <li><a href="../index.html">Accueil</a></li>
           <li><a href="presentation.html">Présentation</a></li>
           <li><a href="passion.html">Mes passions</a></li>
           <li><a href="projet.html">Mon Projet</a></li>
