--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Accueil</title>
   </head>
   <body>
     <header>
@@ -18,9 +23,9 @@
     </header>
     <h1>Bienvenue</h1>
     <img
-      src="https://www.shutterstock.com/shutterstock/photos/1146069941/display_1500/stock-vector-welcome-poster-with-spectrum-brush-strokes-on-white-background-colorful-gradient-brush-design-1146069941.jpg"
+      src="./assets/welcome.png"
       alt="Bannière de bienvenue"
-      height="200"
+      class="welcome-img"
     />
     <p>Premier exercice</p>
     <footer><h2>© Nom Prénom</h2></footer>
