--- a/pages/presentation.html
+++ b/pages/presentation.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+    />
+    <link rel="stylesheet" href="../style.css" />
     <title>Présentation</title>
   </head>
   <body>
@@ -27,8 +32,8 @@
     <table>
       <thead>
         <tr>
-          <th scope="col">Qualités</th>
-          <th scope="col">Défauts</th>
+          <th class="head-cell" scope="col">Qualités</th>
+          <th class="head-cell" scope="col">Défauts</th>
         </tr>
       </thead>
       <tbody>
